growth-now cta and add-num field gap fixed

--- a/blocks/growth-now/growth-now.scss
+++ b/blocks/growth-now/growth-now.scss
@@ -215,7 +215,7 @@ main {
                 form {
                     display: flex;
                     align-items: center;
-                    gap: 5px;
+                    gap: 12px;
 
                     @include media(mobile) {
                         flex-direction: column;
